examples/mood/tests/fixtures/type_error.mood.expected
Error: Expected "i32", got "f64":
 --> type_error.mood:2:3

  | pub fn test(): i32 {
2 |   10.00_f64
  |   ^^^^^^^^^ Expected "i32".
  | }
