examples/mood/tests/fixtures/type_error.mood
pub fn test(): i32 {
  10.00_f64
}